[package]
name = "ethox-afxdp"
version = "0.0.0"
edition = "2021"

[dependencies]
ethox = { path = "../ethox" }
[dependencies.xdpilone]
version = "0.0.0"
path = "../../xdpilone"
[dependencies.bpf-lite]
version = "0.0.0"
path = "../../bpf-lite"
[dependencies.libc]
version = "0.2.103"
default-features = false

[dev-dependencies.ethox-iperf]
path = "../ethox-iperf"
