[package]
name = "ethox-afxdp"
version = "0.0.0"
edition = "2021"

[dependencies]
ethox = { path = "../ethox" }
[dependencies.bytemuck]
version = "1.7"
[dependencies.bpf-lite]
version = "0.0.0"
path = "../../bpf-lite"
[dependencies.libc]
version = "0.2.103"
default-features = false
[dependencies.xdpilone]
version = "0.0.0"
path = "../../xdpilone"

[dev-dependencies.ethox-iperf]
path = "../ethox-iperf"
