[package]
name = "ethox-bpf"
description = "Provides an ethernet layer bpf for ethox"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
license = "AGPL-3.0-only"
publish = false
version = "0.0.1"
edition = "2018"

[workspace]
# Requires libpcap so barred from the workspace.
members = ["."]

[dependencies]
bpfjit-sys = "2.0"
ethox = { path = "../ethox" }
