[package]
name = "ethox-io-uring"
version = "0.1.0"
description = "An io-uring device implementation for ethox"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

[dependencies]
ethox = { path = "../ethox", version = "0.0.1" }
io-uring = "0.3.1"
libc = { version = "0.2.66", default-features = false, optional = true }
