[package]
name = "ethox-iperf"
description = "Implementation of iperf with ethox"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
license = "AGPL-3.0-only"
publish = false
version = "0.0.1-wip"
edition = "2018"

[dependencies]
ethox = { path = "../ethox", default-features = false, features = ["std", "sys"] }
structopt = { version = "0.2", default-features = false }

[lib]
path = "src/lib.rs"

[[bin]]
name = "iperf3"
path = "bin/main.rs"

[features]
default = []
# Nightly feature for internal benchmarks
bench = []
