[package]
name = "ethox-wasm"
version = "0.0.0"
description = "Combine Ethox, XDP, WASM"
edition = "2021"

[dependencies.xdpilone]
path = "../../xdpilone"
version = "0.0.0"
# [dependencies.ethox-afxdp]
# path = "../ethox-afxdp"
[dependencies.wasmtime]
version = "4"
[dependencies.libc]
version = "0.2.108"
