[package]
name = "ethox-wg"
version = "0.1.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

[dependencies]
# Needed for curve25519 operations.
curve25519-dalek = "3"
# Needed for the network operations in IP/UDP
ethox = { path = "../ethox" }
# Needed for ChaCha20Poly1305 AEAD.
ring = "0.16"

[dependencies.mio]
version = "0.6.2"
optional = true

[dependencies.tokio]
version = "0.2.22"
optional = true

[dependencies.tun]
version = "0.5"
optional = true

[features]
tun-binary = ["mio", "tokio", "tun"]

[[bin]]
name = "wg"
path = "bin/wg.rs"
required-features = ["tun-binary"]
