[package]
name = "ethox"
description = "A standalone network stack for user-space networking and unikernels"
version = "0.0.1-beta"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "GPL-3.0-only"
documentation = "https://docs.rs/ethox"
categories = ["network-programming", "no-std"]

[dependencies]
byteorder = { version = "1.0", default-features = false }
libc = { version = "0.2", default-features = false, optional = true }

[features]
default = ["alloc"]
# Interact with the `alloc` crate from std
alloc = []
# Interact with all of `std`
std = ["alloc"]
# Have libc-based platform dependent sockets
sys = ["libc"]

[dev-dependencies]
structopt = { version = "0.2", default-features = false }

[[example]]
name = "debug_tap"
required-features = ["alloc", "sys"]

[[example]]
name = "ping_tap"
required-features = ["alloc", "sys"]

[[example]]
name = "arp_tap"
required-features = ["alloc", "sys"]

[[example]]
name = "curl"
required-features = ["alloc", "sys"]
